samples/_failures_safe/1761085290_718dd1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1503de6b.c: In function ‘main’:
./samples/SAFE/__tmp_1503de6b.c:145:5: error: expected declaration or statement at end of input
  145 |     if (!init_compression_context(&ctx, 50)) {
      |     ^~
./samples/SAFE/__tmp_1503de6b.c:145:5: error: expected declaration or statement at end of input
